--- a/Code/Project/Templates/base.html
+++ b/Code/Project/Templates/base.html
@@ -3,24 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/Static/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Habibi&display=swap" rel="stylesheet"> 
     <title>Gotham Regency Inn</title>
 </head>
 <body>
-    <header>
-        <nav>
+    <header class="pd-inl-400 | pd-blk-300">
+        <nav class="fs-300 | fx-space-between">
             <span>
                 <a href="#">Gotham Regency Inn</a>
             </span>
-            <span>
-                <a href="#">Find</a>
-                <a href="#">Vacation</a>
-                <a href="#">Our Brands</a>
-                <a href="#">About Us</a>
-                <a href="#">Profile</a>
+            <span class="fx-space-evenly">
+                <a href="#" class="pd-inl-200">Find</a>
+                <a href="#" class="pd-inl-200">Vacation</a>
+                <a href="#" class="pd-inl-200">Our Brands</a>
+                <a href="#" class="pd-inl-200">About Us</a>
+                <a href="#" class="pd-inl-200">Profile</a>
             </span>
         </nav>
     </header>
