added text color to navbar

--- a/Code/Project/Templates/base.html
+++ b/Code/Project/Templates/base.html
@@ -9,18 +9,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Habibi&display=swap" rel="stylesheet"> 
     <title>Gotham Regency Inn</title>
 </head>
-<body>
+<body class="bg-gray-100">
     <header class="pd-inl-400 | pd-blk-300">
         <nav class="fs-300 | fx-space-between">
             <span>
-                <a href="#">Gotham Regency Inn</a>
+                <a href="#" class="text-white-100">Gotham Regency Inn</a>
             </span>
             <span class="fx-space-evenly">
-                <a href="#" class="pd-inl-200">Find</a>
-                <a href="#" class="pd-inl-200">Vacation</a>
-                <a href="#" class="pd-inl-200">Our Brands</a>
-                <a href="#" class="pd-inl-200">About Us</a>
-                <a href="#" class="pd-inl-200">Profile</a>
+                <a href="#" class="pd-inl-200 | text-white-100">Find</a>
+                <a href="#" class="pd-inl-200 | text-white-100">Vacation</a>
+                <a href="#" class="pd-inl-200 | text-white-100">Our Brands</a>
+                <a href="#" class="pd-inl-200 | text-white-100">About Us</a>
+                <a href="#" class="pd-inl-200 | text-white-100">Profile</a>
             </span>
         </nav>
     </header>
