messed up the design

--- a/Code/Project/Templates/login.html
+++ b/Code/Project/Templates/login.html
@@ -11,9 +11,15 @@
       rel="stylesheet"
     />
     <title>Gotham Regency Inn</title>
+    <style>
+        main{
+          background: url('/Static/pexels-ben-mack-5707644.jpg');
+        }
+      </style>
   </head>
-  <body class="bg-image">
-    <main>
+  <body>
+    <!-- <img src="Static/pexels-ben-mack-5707644.jpg" alt="Error"> -->
+    <main class="bg-image">
       <div class="fx-centre | fx-col">
         <h1 class="text-white-100 | fs-500">Welcome back!!</h1>
         <p class="fs-200 | text-gray-100">Let's get logged in</p>
@@ -27,7 +33,7 @@
           <span>Meta logo</span>
           <span>Twitter logo</span>
         </div>
-        <div class="fx-centre | fx-col">
+        <div class="fx-centre |  fx-col">
           <p>Don't have an account?</p>
           <a href="#">Sign Up</a>
         </div>
