--- a/Code/Project/Templates/index.html
+++ b/Code/Project/Templates/index.html
@@ -1,95 +1,156 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/Static/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-        href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+      href="https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <title>Gotham Regency Inn</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="bg-image">
-        <header class="pd-inl-400 | pd-blk-300">
-            <nav class="fs-300 | fx-space-between">
-                <span>
-                    <a href="#" class="text-white-100">Gotham Regency Inn</a>
-                </span>
-                <span class="fx-space-evenly">
-                    <a href="#" class="pd-inl-200 | text-white-100">Find</a>
-                    <a href="#" class="pd-inl-200 | text-white-100">Vacation</a>
-                    <a href="#" class="pd-inl-200 | text-white-100">Our Brands</a>
-                    <a href="#" class="pd-inl-200 | text-white-100">About Us</a>
-                    <a href="#" class="pd-inl-200 | text-white-100">Profile</a>
-                </span>
-            </nav>
-        </header>
-        <div class="fx-centre fx-col h100-w100">
-            <h1>Find a perfect place for your stay</h1>
-            <button class="rounded-button pd-inl-300 pd-blk-100">Book Now</button>
-        </div>
+      <header class="pd-inl-400 | pd-blk-300">
+        <nav class="fs-300 | fx-space-between">
+          <span>
+            <a href="#" class="text-white-100">Gotham Regency Inn</a>
+          </span>
+          <span class="fx-space-evenly">
+            <a href="#" class="pd-inl-200 | text-white-100">Find</a>
+            <a href="#" class="pd-inl-200 | text-white-100">Vacation</a>
+            <a href="#" class="pd-inl-200 | text-white-100">Our Brands</a>
+            <a href="#" class="pd-inl-200 | text-white-100">About Us</a>
+            <a href="#" class="pd-inl-200 | text-white-100">Profile</a>
+          </span>
+        </nav>
+      </header>
+      <div class="fx-centre fx-col h100-w100">
+        <h1 class="text-white-100 fs-600">
+          Find a perfect place for your stay
+        </h1>
+        <button
+          class="rounded-button pd-inl-300 pd-blk-100 gradient-button text-white-200"
+        >
+          Book Now
+        </button>
+      </div>
     </div>
     <section></section>
     <div class="bg-image2">
-        <div class="blr-50 h100-w100 fx-centre">
-            <h2 class="fs-500 text-white-200">Our Hotels</h2>
-            <div class="fx-row">
-                <div class="hotel-card">
-                    <h3>Arabic Rafahia</h3>
-                    <p>Enjoy the breeze of United Arab Emirates under the moon. A lavish suite for you, equipped with 7
-                        star
-                        resort and bars</p>
-                    <button>Reseve</button>
-                    <button><span class="material-symbols-outlined">info</span></button>
-                </div>
-                <div class="hotel-card">
-                    <h3>Italian Russo</h3>
-                    <p>5-star Italian Inn at Venice, Italy. Enjoy the luxurious river view at the banks of Grand Canal
-                        of
-                        Venice, and find your Maradona energy.</p>
-                    <button>Reseve</button>
-                    <button><span class="material-symbols-outlined">info</span></button>
-                </div>
-                <div class="hotel-card">
-                    <h3>Là America</h3>
-                    <p>5-star Italian Inn at Venice, Italy. Enjoy the luxurious river view at the banks of Grand Canal
-                        of
-                        Venice, with world-class food.</p>
-                    <button>Reseve</button>
-                    <button><span class="material-symbols-outlined">info</span></button>
-                </div>
-                <div class="hotel-card">
-                    <h3>Reich Germany</h3>
-                    <p>5-star Italian Inn at Venice, Italy. Enjoy the luxurious river view at the banks of Grand Canal
-                        of
-                        Venice, with world-class food.</p>
-                    <button>Reseve</button>
-                    <button><span class="material-symbols-outlined">info</span></button>
-                </div>
+      <div class="blr-50 h100-w100 fx-centre">
+        <h2 class="fs-500 text-white-200">Our Hotels</h2>
+        <div class="fx-row">
+          <div class="hotel-card brd-rad-200" id="arab">
+            <div
+              class="hotel-card-2"
+            >
+              <h3 class="fs-300">Arabic Rafahia</h3>
+              <p>
+                Enjoy the breeze of United Arab Emirates under the moon. A
+                lavish suite for you, equipped with 7 star resort and bars
+              </p>
+              <div class="fx-row-center">
+                <button
+                  class="rounded-button pd-inl-300 pd-blk-100 card-button text-white-100" id="button-style"
+                >
+                  Reseve
+                </button>
+                <button class="rounded-button card-button" id="button-style">
+                  <img src="{% static "info.svg" %}" alt="info_button">
+                </button>
+              </div>
             </div>
+          </div>
+          <div class="hotel-card" id="italy">
+            <div
+              class="hotel-card-2"
+            >
+              <h3 class="fs-300">Italian Russo</h3>
+              <p>
+                5-star Italian Inn at Venice, Italy. Enjoy the luxurious river
+                view at the banks of Grand Canal of Venice, and find your
+                Maradona energy.
+              </p>
+              <div class="fx-row-center">
+                <button
+                  class="rounded-button pd-inl-300 pd-blk-100 card-button text-white-100" id="button-style"
+                >
+                  Reseve
+                </button>
+                <button class="rounded-button card-button" id="button-style">
+                  <img src="{% static "info.svg" %}" alt="info_button">
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="hotel-card" id="america">
+            <div
+              class="hotel-card-2"
+            >
+              <h3 class="fs-300">Là America</h3>
+              <p>
+                5-star Italian Inn at Venice, Italy. Enjoy the luxurious river
+                view at the banks of Grand Canal of Venice, with world-class
+                food.
+              </p>
+              <div class="fx-row-center">
+                <button
+                  class="rounded-button pd-inl-300 pd-blk-100 card-button text-white-100" id="button-style"
+                >
+                  Reseve
+                </button>
+                <button class="rounded-button card-button" id="button-style">
+                  <img src="{% static "info.svg" %}" alt="info_button">
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="hotel-card" id="german">
+            <div
+              class="hotel-card-2"
+            >
+              <h3 class="fs-300">Reich Germany</h3>
+              <p>
+                5-star Italian Inn at Venice, Italy. Enjoy the luxurious river
+                view at the banks of Grand Canal of Venice, with world-class
+                food.
+              </p>
+              <div class="fx-row-center">
+                <button
+                  class="rounded-button pd-inl-300 pd-blk-100 card-button text-white-100" id="button-style"
+                >
+                  Reseve
+                </button>
+                <button class="rounded-button card-button" id="button-style">
+                  <img src="{% static "info.svg" %}" alt="info_button">
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
     <footer>
+      <div>All Rights Reserved</div>
+      <div>
+        <span>© Gotham Regency Inn™, 2023</span>
         <div>
-            All Rights Reserved
+          <a href="#">Privacy Policy</a>
+          <a href="#">Terms and Conditions</a>
+          <a href="#">Accesibility</a>
+          <a href="#">Sitemap</a>
         </div>
-        <div>
-            <span>© Gotham Regency Inn™, 2023</span>
-            <div>
-                <a href="#">Privacy Policy</a>
-                <a href="#">Terms and Conditions</a>
-                <a href="#">Accesibility</a>
-                <a href="#">Sitemap</a>
-            </div>
-        </div>
+      </div>
     </footer>
-</body>
-
+  </body>
 </html>
