--- a/Code/Project/Templates/find.html
+++ b/Code/Project/Templates/find.html
@@ -30,13 +30,20 @@
         <div class="fx-centre fx-col blr-300 bs-max brd-rad-300 pd-300">
             <h1 class="text-white-100">Find a Hotel</h1>
             <section class="divider divider1 mg-blk-200"></section>
-            <form action="findHotel" class="pd-200">
+            {% csrf_token %}
+            <form action="findHotel" class="pd-200" method="post">
                 <div class="fx-col">
                     <label for="location" class="text-white-200">Location</label>
                     <span>
-                        <input type="text" name="Hotel" id="hotel" placeholder="Hotel" class="input-format brd-rad-200 | bg-gray-100 | brd-gray-100-2 mg-inl-100 ">
-                        <input type="text" name="City" id="city" placeholder="City" class="input-format brd-rad-200 | bg-gray-100 | brd-gray-100-2 mg-inl-100 ">
-                        <input type="text" name="Country" id="country" placeholder="Country" class="input-format brd-rad-200 | bg-gray-100 | brd-gray-100-2 mg-inl-100 ">
+                        <select name="hotel" id="hotel">
+                            <option value="dubai">GRI, Dubai, UAE</option>
+                            <option value="abudhabi">GRI, Abu Dhabi, UAE</option>
+                            <option value="newyork">GRI, New York, USA</option>
+                            <option value="tokyo">GRI, Tokyo, Japan</option>
+                            <option value="amsterdam">GRI, Amsterdam, Netherlands</option>
+                            <option value="pyongyang">GRI, Pyongyang, North Korea</option>
+                            <option value="rio">GRI, Rio de Janerio, Brazil</option>
+                        </select>
                     </span>
                 </div>
                 <div class="fx-row fx-space-between">
@@ -68,32 +75,32 @@
                         </span>
                     </div>
                 </div>
+                <section class="divider divider1"></section>
+                <div class="fx-row">
+                    <h1>Additional Services</h1>
+                    <img src="{% static "arrow-right.svg" %}" alt="ios_arrow_right">
+                </div>
+                <div class="fx-col">
+                    <span>
+                        <input type="checkbox" name="check1">
+                        <label for="check1">Book me an Airplane ticket</label>
+                    </span>
+                    <span>
+                        <input type="checkbox" name="check2">
+                        <label for="check2">Book me a Train ticket</label>
+                    </span>
+                    <span>
+                        <input type="checkbox" name="check3">
+                        <label for="check3">Book me a Taxi from Airport/Railway Station</label>
+                    </span>
+                    <span>
+                        <input type="checkbox" name="check4">
+                        <label for="check4">I'm a Gold/Gold Pro/Gold Pro Max customer</label>
+                    </span>
+                </div>
+                <button type="submit">Book</button>
             </form>
-            <section class="divider divider1"></section>
-            <div class="fx-row">
-                <h1>Additional Services</h1>
-                <img src="{% static "arrow-right.svg" %}" alt="ios_arrow_right">
             </div>
-            <div class="fx-col">
-                <span>
-                    <input type="checkbox" name="check1">
-                    <label for="check1">Book me an Airplane ticket</label>
-                </span>
-                <span>
-                    <input type="checkbox" name="check2">
-                    <label for="check2">Book me a Train ticket</label>
-                </span>
-                <span>
-                    <input type="checkbox" name="check3">
-                    <label for="check3">Book me a Taxi from Airport/Railway Station</label>
-                </span>
-                <span>
-                    <input type="checkbox" name="check4">
-                    <label for="check4">I'm a Gold/Gold Pro/Gold Pro Max customer</label>
-                </span>
-            </div>
-            <button>Next</button>
-        </div>
     </main>
   </body>
 </html>
